bug fixing so the built jar file works